Code cleaning in algorithm.memory.script packages